--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
   <body>
 
     <div id="calculator-container">
-      <div class="square-calculator">
-      </div>
       <div class="result-container"> 
+        <div class="ClearANDResetDiv">
+          <button class="clearinput">Cle</button>
+          <button class="ResetAllData">Res</button>
+        </div>
           <h1 id="result"></h1>
       </div>
         <div class="parent">
           <div class="buttons1">
-          <div class="div1 NbrBtn"><button id="1value" onclick="Value1Box.value += 1,textspace.innerText += 1">1</button></div>
+          <div class="div1 NbrBtn"><button onclick="Value1Box.value += 1,textspace.innerText += 1">1</button></div>
           <div class="div2 NbrBtn"><button onclick="Value1Box.value += 4, textspace.innerText += 4">4</button></div>
           <div class="div3 NbrBtn"><button onclick="Value1Box.value += 7, textspace.innerText += 7">7</button> </div>
           <div class="div4 NbrBtn"><button onclick="CalcularFnct()">=</button></div>
@@ -29,14 +31,14 @@
           <div class="div10 NbrBtn"><button onclick="Value1Box.value += 6, textspace.innerText += 6">6</button></div>
           <div class="div11 NbrBtn"><button onclick="Value1Box.value += 9, textspace.innerText += 9">9</button></div>
           <div class="div12 NbrBtn"><button id=".value1">.</button></div>
-          <div class="div13 NbrBtn"><button id="/value">%</button></div>
+          <div class="div13 NbrBtn"><button id="/value">/</button></div>
           <div class="div14 NbrBtn"><button id="*value">X</button></div>
           <div class="div15 NbrBtn"><button id="-value">-</button></div>
           <div class="div16 NbrBtn"><button id="+value">+</button></div>
         </div>
 
         <div class="buttons2">
-          <div class="div1 NbrBtn"><button onclick="Value2Box.value += 1, textspace.innerText += 1">1AAA</button></div>
+          <div class="div1 NbrBtn"><button onclick="Value2Box.value += 1, textspace.innerText += 1">1</button></div>
           <div class="div2 NbrBtn"><button onclick="Value2Box.value += 4, textspace.innerText += 4">4</button></div>
           <div class="div3 NbrBtn"><button  onclick="Value2Box.value += 7, textspace.innerText += 7">7</button></div>
           <div class="div4 NbrBtn"><button onclick="CalcularFnct()">=</button></div>
@@ -48,29 +50,25 @@
           <div class="div10 NbrBtn"><button onclick="Value2Box.value += 6, textspace.innerText += 6">6</button></div>
           <div class="div11 NbrBtn"><button onclick="Value2Box.value += 9, textspace.innerText += 9">9</button></div>
           <div class="div12 NbrBtn"><button id=".value2">.</button></div>
-          <div class="div13 NbrBtn"><button id="/value">%</button></div>
+          <div class="div13 NbrBtn"><button id="/value">/</button></div>
           <div class="div14 NbrBtn"><button id="*value">X</button></div>
           <div class="div15 NbrBtn"><button id="-value">-</button></div>
           <div class="div16 NbrBtn"><button id="+value">+</button></div>
         </div>
       </div>
 
-    <div class="calculator-box">
+    <div class="calculator-box" style="display: none;">
       <div id="calculator">
         <div class="inputs">
-          <input type="text" id="Val1" placeholder="Valor 1"  />
-          <input type="text" id="Type" />
-          <input type="text" id="Val2" placeholder="Valor 2"/>
+          <input type="text" id="Val1" placeholder="Valor 1" title="Val1_box" />
+          <input type="text" id="Type" title="Type_box"/>
+          <input type="text" id="Val2" placeholder="Valor 2" title="Val2_box"/>
         </div>
-   
-
-
-
         <button id="clearinput">DEL</button>
         <button id="ResetAllData">RESET</button>
       </div>
     </div>
--->
+
     <script src="app.js"></script>
   </body>
 </html>
