--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div id="calculator-container">
     <div class="result-container"> 
       <div class="ClearANDResetDiv">
-        <button class="clearinput">Cle</button>
-        <button class="ResetAllData">Res</button>
+        <button class="clearinput">C</button>
+        <button class="ResetAllData">AC</button>
       </div>
         <h1 id="result"></h1>
     </div>
